--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: mr-smithers-excellent/docker-build-push@v2
         with:
           image: amasuda/plantuml-cli
-          registry: hub.docker.com
+          registry: docker.io # TIPS: hub.docker.com is website and not suitable
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
   dockerhub-push-latest:
@@ -29,6 +29,6 @@ jobs:
         with:
           image: amasuda/plantuml-cli
           tag: latest
-          registry: hub.docker.com
+          registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
