--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -10,8 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     if: contains(github.event.head_commit.message, '[skip ci]') == false
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       - uses: mr-smithers-excellent/docker-build-push@v2
         with:
           image: amasuda/plantuml-cli
@@ -23,8 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     if: contains(github.event.head_commit.message, '[skip ci]') == false
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       - uses: mr-smithers-excellent/docker-build-push@v2
         with:
           image: amasuda/plantuml-cli
