--- a/.github/workflows/update-image.yml
+++ b/.github/workflows/update-image.yml
@@ -2,7 +2,7 @@ name: update-image
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '* * * * 0'
+    - cron:  '*/5 * * * *'
 
 jobs:
   update-image:
