--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: mr-smithers-excellent/docker-build-push@v2
         with:
           image: amasuda/plantuml-cli
-          registry: docker.io # TIPS: hub.docker.com is website and not suitable
+          registry: docker.io # TIPS: hub.docker.com is website and not appropriate
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
   dockerhub-push-latest:
