--- a/.github/workflows/update-image.yml
+++ b/.github/workflows/update-image.yml
@@ -25,6 +25,8 @@ jobs:
             echo "git diff exit code $?. Update detected"
             git config --local user.email "action@github.com"
             git config --local user.name "GitHub Action"
+            git diff
+            git diff-index HEAD
             git add --all
             git commit -m "[GitHub Action] Update automatically"
             echo ::set-output name=update::true
