[skip ci] fix cron time for check plantuml update

--- a/.github/workflows/update-image.yml
+++ b/.github/workflows/update-image.yml
@@ -3,7 +3,7 @@ on:
   schedule:
     # * is a special character in YAML so you have to quote this string
     # https://help.github.com/en/actions/reference/events-that-trigger-workflows#scheduled-events-schedule
-    - cron:  '10 9 * * *'
+    - cron:  '*/5 * * * *'
 env:
   TZ: "Asia/Tokyo"
 
