--- a/.github/workflows/update-image.yml
+++ b/.github/workflows/update-image.yml
@@ -18,7 +18,7 @@ jobs:
       - id: check-update
         name: check if Dockerfile update required
         run: |
-          if git diff-index HEAD; then
+          if git diff-index --quiet HEAD --; then
             echo "git diff exit code $?. No changes"
             echo ::set-output name=update::false
           else
