--- a/.github/workflows/update-image.yml
+++ b/.github/workflows/update-image.yml
@@ -13,6 +13,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          # actions/checkout holds GITHUB_TOKEN for run authenticated git command
+          # https://github.com/actions/checkout#checkout-v2
+          # remove this for triggering other workflow
+          persist-credentials: false
       - name: check package update
         run: make update
       - id: check-update
@@ -36,6 +41,6 @@ jobs:
         if: steps.check-update.outputs.update == 'true'
         uses: ad-m/github-push-action@master
         with:
-          # you cannot use secrets.GITHUB when you want to trigger other workflow
+          # you cannot use secrets.GITHUB_TOKEN when you want to trigger other workflow
           # https://docs.github.com/ja/actions/configuring-and-managing-workflows/authenticating-with-the-github_token
           github_token: ${{ secrets.PAT }}
